hidable columns visibility fix

--- a/client/_EntityGrid.scss
+++ b/client/_EntityGrid.scss
@@ -173,7 +173,7 @@ $eg-fade-overflow: 35px !default; // 'false'
       position: sticky;
       background-color: $eg-panel-bg-color;
       white-space: nowrap;
-      z-index: 1;
+      z-index: 2;
       border-top: 0px;
     }
   }
@@ -235,7 +235,7 @@ $eg-fade-overflow: 35px !default; // 'false'
       }
     }
     &-cell {
-
+      z-index: 1;
       padding-top: 0;
       .ss-main.form-control {
         padding: 0;
